# spacechamp

./: LICENSE  README.md  angular.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  diesel.toml
backend/docs/: Черновик API для админки космического чемпионата.md
backend/mail/: code.html
backend/migrations/2024-09-14-204256_create_tables/: down.sql  up.sql
backend/migrations/2024-09-14-212310_create_admin/: down.sql  up.sql
backend/migrations/2024-09-21-142054_deleted-participants/: down.sql  up.sql
backend/migrations/2024-09-21-165603_fix-question/: up.sql
backend/migrations/2024-10-10-091714_call/: down.sql  up.sql
backend/scripts/: backup_participants.py  code_to_number.py  codes.txt  copy_adults_from_prod.py  copy_participants_from_prod.py  gen_report.py  get_finals.py  get_participants.py  get_participants_stats.py  get_stats.py  get_zp.py  parse_participants_emails.py  patch_regions.py  send_participants_codes.py  upload_participants.py
backend/src/: api.rs  data.rs  domain.rs  main.rs
backend/src/api/: auth.rs  error.rs  mod.rs  payloads.rs  session_store.rs
backend/src/api/v1/: bureau.rs  jury.rs  login.rs  mod.rs  org.rs  report.rs  tilda.rs
backend/src/datasource/: adults.rs  mod.rs  models.rs  participants.rs  result.rs  schema.rs  utils.rs
backend/src/domain/: adult.rs  bureau.rs  mod.rs  operations.rs  participant.rs
frontend/: .dockerignore  Dockerfile  angular.json  package-lock.json  package.json  proxy.conf.json  (+1 more)
(+191 files in other folders)
