[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
async-trait = "0.1.82"
axum = "0.7.5"
axum-login = "0.16.0"
derive_more = { version = "1.0.0", features = ["full"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
