[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
argh = "0.1.12"
async-trait = "0.1.82"
axum = "0.7.5"
axum-login = "0.16.0"
derive_more = { version = "1.0.0", features = ["full"] }
diesel = { version = "2.2.4", features = ["postgres", "serde_json"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.2", features = ["serde"] }
